package com.example.pattern.decorator;

public class DeCaf extends Coffee {

	public DeCaf() {
		setDes(" 低咖啡因 ");
		setPrice(1.0f);
	}
}
