package com.example.pattern.decorator;

public class Espresso extends Coffee {
	
	public Espresso() {
		setDes(" 濃縮咖啡 ");
		setPrice(6.0f);
	}
}
