package com.example.pattern.decorator;

public class LongBlack extends Coffee {

	public LongBlack() {
		setDes(" 大冰美式咖非 ");
		setPrice(5.0f);
	}
}
