package com.example.pattern.decorator;

public class ShortBlack extends Coffee{
	
	public ShortBlack() {
		setDes(" 小冰美式咖非 ");
		setPrice(4.0f);
	}
}
