package com.example.pattern.decorator;

public class Soy extends Decorator{

	public Soy(Drink obj) {
		super(obj);
		// TODO Auto-generated constructor stub
		setDes(" 豆漿  ");
		setPrice(1.5f);
	}

}
